--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~7.2.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "ngx-doc-viewer": "^0.1.20",
     "rxjs": "~6.3.3",
     "s": "^1.0.0",
     "tslib": "^1.9.0",
